Fixed bug with scrolling on mobile. Scrolling is now window-controlled instead of root-element-controlled.

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,8 @@
 #root {
   margin: 0 auto;
   width: 100vw;
-  height: 100vh;
   display: flex;
   flex-direction: column;
-  overflow-x: hidden;
 }
 
 .logo {
