--- a/src/index.css
+++ b/src/index.css
@@ -23,11 +23,12 @@ a:hover {
 }
 
 body {
-  margin: 0;
   display: flex;
-  place-items: center;
+  place-items: top;
   min-width: 320px;
-  min-height: 100%;
+  min-height: 100vh;
+  margin: 0;
+  overflow-x: hidden;
   background-image: linear-gradient(120deg, #5FCDD9, #04BF9D, #04BFAD, #027373);
   background-size: 400% 400%;
   background-attachment: fixed;
